Fixes environment variable setup in action.yml

--- a/code2config/action.yml
+++ b/code2config/action.yml
@@ -25,7 +25,7 @@ runs:
         ACTION_REPO_ROOT: ${{ github.action_path }}/..
         GITHUB_TOKEN: ${{ inputs.github_token }}
         GITHUB_ORG: ${{ inputs.github_org }}
-        TEAMS_DIR: ${{ inputs.teams_dir }}
+        GITHUB_REPO_DIR: .
       run: |
         python ${{ github.action_path }}/code2config.py
       shell: bash
