--- a/code2config/action.yml
+++ b/code2config/action.yml
@@ -26,6 +26,7 @@ runs:
         GITHUB_TOKEN: ${{ inputs.github_token }}
         GITHUB_ORG: ${{ inputs.github_org }}
         GITHUB_REPO_DIR: .
+        GITHUB_REPO: ${{ github.repository }}
       run: |
         python ${{ github.action_path }}/code2config.py
       shell: bash
